Triggers workflow on push event

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,6 +5,7 @@ on:
       environment:
         description: 'Deployment environment'
         required: true
+  push:
 jobs:
   build:
     runs-on: ubuntu-latest
